# AI-Engineering-Btc

./: .gitignore
Ai-Eng-Prerequisites/: Dockerfile  docker-compose.yml  hello.py  main.py  pyproject.toml
Ai-Eng-Prerequisites/apps/api/: Dockerfile  pyproject.toml
Ai-Eng-Prerequisites/apps/api/src/api/: app.py
Ai-Eng-Prerequisites/apps/chatbot_ui/: pyproject.toml
Ai-Eng-Prerequisites/notebooks/prerequisites/: 01-llm-apis.ipynb
Ai-Eng-Prerequisites/src/: app.py
